--- a/django_project/core/base_static/css/search-page.css
+++ b/django_project/core/base_static/css/search-page.css
@@ -61,7 +61,8 @@
 
 #map-navigation {
     position: relative;
-    top: -29px;
+    top: -28px;
+    left: 50px;
     float: right;
 }
 
